--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-pandas
-numpy
-scikit-learn
-xgboost
-matplotlib
+streamlit>=1.36
+pandas>=2.1
+numpy>=1.24
+scikit-learn>=1.3
+xgboost==1.7.6
+matplotlib>=3.7
+scipy>=1.10
