--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,3 +1,4 @@
+# For Basket Segmentation
 streamlit>=1.36
 pandas>=2.1
 numpy>=1.24
@@ -5,3 +6,8 @@ scikit-learn>=1.3
 xgboost==1.7.6
 matplotlib>=3.7
 scipy>=1.10
+
+# For Airport Recommendation System
+prophet==1.1.5
+cmdstanpy>=1.2.0
+holidays>=0.29
