--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,18 +1,38 @@
-# For Basket Segmentation
+###############################
+# Core Streamlit App
+###############################
 streamlit>=1.36
 pandas>=2.1
 numpy>=1.24
+matplotlib>=3.7
+plotly>=5.24
+
+###############################
+# ML Models for Your Projects
+###############################
 scikit-learn>=1.3
 xgboost==1.7.6
-matplotlib>=3.7
 scipy>=1.10
+statsmodels>=0.14
 
-# For Airport Recommendation System
+###############################
+# Airport Recommendation System
+###############################
 prophet==1.1.5
 cmdstanpy>=1.2.0
 holidays>=0.29
-plotly>=5.24
 
+###############################
+# AI Detective (TruthLens AI)
+###############################
+langchain>=0.1
+faiss-cpu>=1.8.0
+sentence-transformers>=2.2
+pdfplumber>=0.10     # better PDF extraction
+openai>=1.0          # only used if calling GPT
 
-# For Oil & Gas Price Volatility
-statsmodels>=0.14
+###############################
+# General Utilities
+###############################
+tqdm>=4.66
+python-dotenv>=1.0
