--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -30,7 +30,7 @@ faiss-cpu>=1.8.0
 sentence-transformers>=2.2
 pdfplumber>=0.10     # better PDF extraction
 openai>=1.0          # only used if calling GPT
-
+PyPDF2
 ###############################
 # General Utilities
 ###############################
