--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -28,6 +28,7 @@ holidays>=0.29
 langchain>=0.1
 langchain-core>=0.1
 langchain-community>=0.1
+langchain-text-splitters>=0.0.1
 faiss-cpu>=1.8.0
 sentence-transformers>=2.2
 pdfplumber>=0.10     # better PDF extraction
