--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -34,6 +34,7 @@ sentence-transformers>=2.2
 pdfplumber>=0.10     # better PDF extraction
 openai>=1.0          # only used if calling GPT
 PyPDF2
+pypdf
 ###############################
 # General Utilities
 ###############################
