--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -35,6 +35,7 @@ pdfplumber>=0.10     # better PDF extraction
 openai>=1.0          # only used if calling GPT
 PyPDF2
 pypdf
+accelerate
 ###############################
 # General Utilities
 ###############################
